re did vital signs and smoking status because my laptop crashed

--- a/task1.ipynb
+++ b/task1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['VITAL SIGNS', 'vital signs', 'Vital Signs', 'Vital signs'])\n"
+      "dict_keys(['VITAL SIGNS', 'vital signs', 'Vital Signs', 'Vital signs'])\n",
+      "Counter({'VITAL SIGNS': ['Project3_data/379-03.xml', 'Project3_data/316-02.xml', 'Project3_data/222-03.xml', 'Project3_data/162-03.xml', 'Project3_data/154-03.xml', 'Project3_data/113-02.xml', 'Project3_data/263-02.xml', 'Project3_data/300-02.xml', 'Project3_data/144-01.xml', 'Project3_data/324-03.xml', 'Project3_data/127-01.xml', 'Project3_data/347-02.xml', 'Project3_data/103-01.xml', 'Project3_data/300-01.xml', 'Project3_data/183-05.xml', 'Project3_data/103-02.xml', 'Project3_data/395-02.xml', 'Project3_data/366-01.xml', 'Project3_data/395-01.xml', 'Project3_data/266-02.xml', 'Project3_data/120-04.xml', 'Project3_data/266-03.xml', 'Project3_data/215-02.xml', 'Project3_data/116-01.xml', 'Project3_data/264-01.xml', 'Project3_data/274-04.xml', 'Project3_data/266-04.xml', 'Project3_data/120-03.xml', 'Project3_data/344-02.xml', 'Project3_data/112-01.xml', 'Project3_data/281-03.xml', 'Project3_data/311-01.xml', 'Project3_data/171-03.xml', 'Project3_data/213-04.xml', 'Project3_data/254-01.xml', 'Project3_data/157-02.xml', 'Project3_data/173-03.xml', 'Project3_data/213-01.xml', 'Project3_data/213-03.xml', 'Project3_data/362-02.xml', 'Project3_data/370-02.xml', 'Project3_data/192-03.xml'], 'Vital Signs': ['Project3_data/304-03.xml', 'Project3_data/251-02.xml', 'Project3_data/316-03.xml', 'Project3_data/168-01.xml', 'Project3_data/308-02.xml', 'Project3_data/384-04.xml', 'Project3_data/178-05.xml', 'Project3_data/152-01.xml', 'Project3_data/388-04.xml', 'Project3_data/386-01.xml', 'Project3_data/131-01.xml', 'Project3_data/304-02.xml', 'Project3_data/277-05.xml', 'Project3_data/189-01.xml', 'Project3_data/220-01.xml', 'Project3_data/320-01.xml', 'Project3_data/308-01.xml', 'Project3_data/168-03.xml', 'Project3_data/214-04.xml', 'Project3_data/152-02.xml', 'Project3_data/164-03.xml', 'Project3_data/131-02.xml', 'Project3_data/117-02.xml', 'Project3_data/400-04.xml', 'Project3_data/251-04.xml', 'Project3_data/185-04.xml', 'Project3_data/396-03.xml', 'Project3_data/178-02.xml', 'Project3_data/220-04.xml', 'Project3_data/308-04.xml', 'Project3_data/220-05.xml', 'Project3_data/316-04.xml', 'Project3_data/214-01.xml', 'Project3_data/396-02.xml', 'Project3_data/119-04.xml', 'Project3_data/277-03.xml', 'Project3_data/178-01.xml', 'Project3_data/306-03.xml', 'Project3_data/386-04.xml', 'Project3_data/119-05.xml', 'Project3_data/210-01.xml', 'Project3_data/200-04.xml', 'Project3_data/137-03.xml', 'Project3_data/181-04.xml', 'Project3_data/236-04.xml', 'Project3_data/338-03.xml', 'Project3_data/210-02.xml', 'Project3_data/349-03.xml', 'Project3_data/234-02.xml', 'Project3_data/373-03.xml', 'Project3_data/226-02.xml', 'Project3_data/210-03.xml', 'Project3_data/363-02.xml', 'Project3_data/170-05.xml', 'Project3_data/392-04.xml', 'Project3_data/255-03.xml', 'Project3_data/200-02.xml', 'Project3_data/137-04.xml', 'Project3_data/162-04.xml', 'Project3_data/193-02.xml', 'Project3_data/355-02.xml', 'Project3_data/363-03.xml', 'Project3_data/338-05.xml', 'Project3_data/373-04.xml', 'Project3_data/226-05.xml', 'Project3_data/135-02.xml', 'Project3_data/135-02.xml', 'Project3_data/200-01.xml', 'Project3_data/139-02.xml', 'Project3_data/290-03.xml', 'Project3_data/349-04.xml', 'Project3_data/234-04.xml', 'Project3_data/193-01.xml', 'Project3_data/226-04.xml', 'Project3_data/177-03.xml', 'Project3_data/352-05.xml', 'Project3_data/323-05.xml', 'Project3_data/299-02.xml', 'Project3_data/215-04.xml', 'Project3_data/340-04.xml', 'Project3_data/141-03.xml', 'Project3_data/177-02.xml', 'Project3_data/342-03.xml', 'Project3_data/321-03.xml', 'Project3_data/209-02.xml', 'Project3_data/387-01.xml', 'Project3_data/305-03.xml', 'Project3_data/385-05.xml', 'Project3_data/342-02.xml', 'Project3_data/151-05.xml', 'Project3_data/177-05.xml', 'Project3_data/376-02.xml', 'Project3_data/376-03.xml', 'Project3_data/395-05.xml', 'Project3_data/331-02.xml', 'Project3_data/364-01.xml', 'Project3_data/196-05.xml', 'Project3_data/376-01.xml', 'Project3_data/315-01.xml', 'Project3_data/397-02.xml', 'Project3_data/397-03.xml', 'Project3_data/184-04.xml', 'Project3_data/278-05.xml', 'Project3_data/385-03.xml', 'Project3_data/196-04.xml', 'Project3_data/342-04.xml', 'Project3_data/242-04.xml', 'Project3_data/151-03.xml', 'Project3_data/331-01.xml', 'Project3_data/110-04.xml', 'Project3_data/348-02.xml', 'Project3_data/391-05.xml', 'Project3_data/383-05.xml', 'Project3_data/244-03.xml', 'Project3_data/339-03.xml', 'Project3_data/391-04.xml', 'Project3_data/235-03.xml', 'Project3_data/260-02.xml', 'Project3_data/256-03.xml', 'Project3_data/358-04.xml', 'Project3_data/335-01.xml', 'Project3_data/348-01.xml', 'Project3_data/244-01.xml', 'Project3_data/393-03.xml', 'Project3_data/329-04.xml', 'Project3_data/354-04.xml', 'Project3_data/313-04.xml', 'Project3_data/260-01.xml', 'Project3_data/203-01.xml', 'Project3_data/325-01.xml', 'Project3_data/348-04.xml', 'Project3_data/157-03.xml', 'Project3_data/244-04.xml', 'Project3_data/383-02.xml', 'Project3_data/348-05.xml', 'Project3_data/346-02.xml', 'Project3_data/293-05.xml', 'Project3_data/346-03.xml', 'Project3_data/358-03.xml'], 'Vital signs': ['Project3_data/174-04.xml', 'Project3_data/243-02.xml', 'Project3_data/220-02.xml', 'Project3_data/220-03.xml', 'Project3_data/174-05.xml', 'Project3_data/351-03.xml', 'Project3_data/386-03.xml', 'Project3_data/343-01.xml', 'Project3_data/394-02.xml', 'Project3_data/298-05.xml', 'Project3_data/286-04.xml', 'Project3_data/222-03.xml', 'Project3_data/113-03.xml', 'Project3_data/162-02.xml', 'Project3_data/324-04.xml', 'Project3_data/193-04.xml', 'Project3_data/113-02.xml', 'Project3_data/238-01.xml', 'Project3_data/139-04.xml', 'Project3_data/183-03.xml', 'Project3_data/156-05.xml', 'Project3_data/200-03.xml', 'Project3_data/371-01.xml', 'Project3_data/234-05.xml', 'Project3_data/359-01.xml', 'Project3_data/374-01.xml', 'Project3_data/307-04.xml', 'Project3_data/299-03.xml', 'Project3_data/395-03.xml', 'Project3_data/342-01.xml', 'Project3_data/186-04.xml', 'Project3_data/217-02.xml', 'Project3_data/385-04.xml', 'Project3_data/378-02.xml', 'Project3_data/120-05.xml', 'Project3_data/184-02.xml', 'Project3_data/104-04.xml', 'Project3_data/385-01.xml', 'Project3_data/223-03.xml', 'Project3_data/397-01.xml', 'Project3_data/340-02.xml', 'Project3_data/276-03.xml', 'Project3_data/186-02.xml', 'Project3_data/215-01.xml', 'Project3_data/323-01.xml', 'Project3_data/235-02.xml', 'Project3_data/157-05.xml', 'Project3_data/339-02.xml', 'Project3_data/112-01.xml', 'Project3_data/311-02.xml', 'Project3_data/344-03.xml', 'Project3_data/157-04.xml', 'Project3_data/126-04.xml', 'Project3_data/136-01.xml', 'Project3_data/346-04.xml', 'Project3_data/313-01.xml', 'Project3_data/258-02.xml', 'Project3_data/171-04.xml', 'Project3_data/291-01.xml', 'Project3_data/313-02.xml', 'Project3_data/145-01.xml'], 'vital signs': ['Project3_data/119-01.xml', 'Project3_data/107-01.xml', 'Project3_data/316-02.xml', 'Project3_data/131-01.xml', 'Project3_data/107-02.xml', 'Project3_data/131-02.xml', 'Project3_data/265-01.xml', 'Project3_data/267-04.xml', 'Project3_data/396-01.xml', 'Project3_data/241-03.xml', 'Project3_data/113-02.xml', 'Project3_data/382-04.xml', 'Project3_data/158-04.xml', 'Project3_data/380-04.xml', 'Project3_data/181-02.xml', 'Project3_data/148-02.xml', 'Project3_data/127-03.xml', 'Project3_data/111-02.xml', 'Project3_data/382-03.xml', 'Project3_data/345-04.xml', 'Project3_data/103-02.xml', 'Project3_data/338-04.xml', 'Project3_data/350-03.xml', 'Project3_data/165-04.xml', 'Project3_data/352-02.xml', 'Project3_data/385-02.xml', 'Project3_data/352-01.xml', 'Project3_data/285-03.xml', 'Project3_data/311-03.xml', 'Project3_data/173-05.xml', 'Project3_data/136-03.xml', 'Project3_data/346-04.xml', 'Project3_data/254-04.xml', 'Project3_data/354-01.xml', 'Project3_data/362-01.xml', 'Project3_data/329-03.xml']})\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 29\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28mprint\u001b[39m(Counter(vital_signs_pattern))\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# sum the values in the counter\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28msum\u001b[39m(Counter(vital_signs_pattern)\u001b[38;5;241m.\u001b[39mvalues()))\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'list'"
      ]
     }
    ],
@@ -60,12 +72,17 @@
     "                        vital_signs_pattern[match] = [xml_file]\n",
     "\n",
     "print(vital_signs_pattern.keys())\n",
+    "# sum up all the values in vital_signs_pattern\n",
+    "print(Counter(vital_signs_pattern))\n",
+    "# sum the length of values in vital_signs_pattern\n",
+    "\n",
+    "\n",
     "## Counter({'Vital Signs': 139, 'Vital signs': 61, 'VITAL SIGNS': 42, 'vital signs': 36})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +787,7 @@
        "9            222      stable/normal       0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,13 +897,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "sign\n",
       "stable/normal        297\n",
       "blood pressure       152\n",
       "pulse                100\n",
@@ -894,7 +912,7 @@
       "respiratory rate      30\n",
       "oxygen saturation     18\n",
       "weight                14\n",
-      "Name: sign, dtype: int64\n"
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
